--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<div id="contacts-container" class="relative m-8 font-sans">
+<section id="contacts-container" class="relative m-8 mb-12 font-sans min-h-[780px] hidden">
     <!-- Contact switcher (абсолютное позиционирование) -->
     <div class="absolute top-3 right-3 z-10">
         <div class="flex items-start justify-between p-4 pb-7 bg-white rounded-28 h-[140px] w-[578px]">
@@ -366,4 +366,79 @@
             </form>
         </div>
     </div>
-</div>
+</section>
+
+<footer class="footer py-12 font-sans tw-container">
+    <section class="footer-menu flex items-center justify-between mb-8">
+        <div class="flex items-center gap-3">
+            <div class="icon icon-logo size-11 text-blue-600"></div>
+            <span class="text-blue-900 font-glina text-32 tracking-[-0.64px]">Продакшн</span>
+        </div>
+
+        <nav class="footer-menu__nav flex gap-6">
+            <a href="#" class="footer-menu__link">Услуги</a>
+            <a href="#" class="footer-menu__link">Работы</a>
+            <a href="#" class="footer-menu__link">Отзывы</a>
+            <a href="#" class="footer-menu__link">Вакансии</a>
+            <a href="#" class="footer-menu__link">Кейсы</a>
+            <a href="#" class="footer-menu__link">Клиенты</a>
+            <a href="#" class="footer-menu__link">Об агентстве</a>
+        </nav>
+
+        <div class="mr-4 flex gap-3.5">
+            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-200 text-blue-900"><i class="icon icon-telegram size-6"></i></a>
+            <a href="#" class="flex items-center justify-center size-11 rounded-xl ring-[1.5px] ring-slate-200 text-blue-900"><i class="icon icon-vk size-6"></i></a>
+        </div>
+    </section>
+
+    <section class="footer-info grid grid-cols-[auto_1fr_auto_auto] gap-6">
+        <div class="footer-services flex flex-col items-start">
+            <a href="#" class="group flex items-center flex-nowrap gap-3 p-4 !no-underline rounded-xl transition-colors hover:bg-slate-40">
+                <span class="text-blue-900 text-2xl font-semibold pb-[5px] transition-colors group-hover:text-blue-600">Баннеры</span>
+
+                <div class="footer-services__tags text-slate-400 transition-colors group-hover:text-blue-900">
+                    <span class="footer-services__tag">HTML5</span>
+                    <span class="footer-services__tag">Статика</span>
+                    <span class="footer-services__tag">Видео</span>
+                </div>
+            </a>
+            <a href="#" class="group flex items-center flex-nowrap gap-3 p-4 !no-underline rounded-xl transition-colors hover:bg-slate-40">
+                <span class="text-blue-900 text-2xl font-semibold pb-[5px] transition-colors group-hover:text-blue-600">Наружка</span>
+
+                <div class="footer-services__tags text-slate-400 transition-colors group-hover:text-blue-900">
+                    <span class="footer-services__tag">OOH</span>
+                    <span class="footer-services__tag">DOOH</span>
+                    <span class="footer-services__tag">MF</span>
+                </div>
+            </a>
+            <a href="#" class="group flex items-center flex-nowrap gap-3 p-4 !no-underline rounded-xl transition-colors hover:bg-slate-40">
+                <span class="text-blue-900 text-2xl font-semibold pb-[5px] transition-colors group-hover:text-blue-600">2D</span>
+
+                <div class="footer-services__tags text-slate-400 transition-colors group-hover:text-blue-900">
+                    <span class="footer-services__tag">Иллюстрации</span>
+                    <span class="footer-services__tag">Моушн</span>
+                </div>
+            </a>
+            <a href="#" class="group flex items-center flex-nowrap gap-3 p-4 !no-underline rounded-xl transition-colors hover:bg-slate-40">
+                <span class="text-blue-900 text-2xl font-semibold pb-[5px] transition-colors group-hover:text-blue-600">3D</span>
+
+                <div class="footer-services__tags text-slate-400 transition-colors group-hover:text-blue-900">
+                    <span class="footer-services__tag">Иллюстрации</span>
+                    <span class="footer-services__tag">Моушн</span>
+                </div>
+            </a>
+            <a href="#" class="group flex items-center flex-nowrap gap-3 p-4 !no-underline rounded-xl transition-colors hover:bg-slate-40">
+                <span class="text-blue-900 text-2xl font-semibold pb-[5px] transition-colors group-hover:text-blue-600">Лендинги</span>
+
+                <div class="footer-services__tags text-slate-400 transition-colors group-hover:text-blue-900">
+                    <span class="footer-services__tag">СПЕЦПРОЕКТЫ</span>
+                </div>
+            </a>
+        </div>
+
+        <div class="bg-gray-500"></div>
+        <div class="w-60 bg-gray-500"></div>
+        <div class="w-60 bg-gray-500"></div>
+
+    </section>
+</footer>
