--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,10 @@
 .footer-menu__link {
     @apply text-blue-900 text-[17px]/3.5 font-medium p-3 pr-2.5;
+    @apply rounded-10 transition-colors;
+
+    &:hover, &:active, &:focus {
+        @apply text-blue-900 no-underline bg-slate-40;
+    }
 }
 
 .footer-services {
