--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,6 +16,7 @@
 @import "./contact-switcher.css";
 @import "./chat-message.css";
 @import "./footer.css";
+@import "./footer-case.css";
 
 @theme {
     --font-sans: 'Craftwork Sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
@@ -54,6 +55,9 @@
     --color-indigo-50: #E2E9FF;
     --color-indigo-100: #E5EBFF;
 
+    --color-gray-400: #ABB1C4;
+
+    --radius-10: 10px;
     --radius-20: 20px;
     --radius-28: 28px;
 
